[project]
name = "nodeseek"
version = "0.1.0"
description = "NodeSeek 数据聚合工具 — 热榜 / 帖子详情 / 用户评论"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "lxml>=5.0",
    "cssselect>=1.2",
    "rich>=13.0",
]

[project.scripts]
ns = "ns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
