[project]
name = "nodeseek"
version = "0.1.0"
description = "NodeSeek 数据聚合工具 — 热榜 / 帖子详情 / 用户评论"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "lxml>=5.0",
    "cssselect>=1.2",
    "rich>=13.0",
    "camoufox>=0.4.11",
]

[project.scripts]
ns = "ns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 将根目录的 ns.py 一并打包，使 [project.scripts] 入口点 "ns:main" 生效
packages = ["nodeseek"]
include = ["ns.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
